--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,30 +1,41 @@
-<nav class="flex flex-row relative justify-between px-mobile-padding py-3 items-center">
+<nav class="flex flex-row relative justify-between px-mobile-padding py-3 items-center w-full
+     | lg:py-6">
   <a class="flex flex-row w-28" routerLink="/inicio" ariaCurrentWhenActive="page">
     <img src="assets/logo.svg" class="w-full h-full" />
   </a>
-  <ul [class.hidden]="!isMenuOpen" class="absolute text-md-dark-font text-xl font-normal flex flex-col space-y-8 py-10 right-[5vw] top-full border border-solid border-green rounded-xl w-64 items-center ">
+  <ul
+    [class.hidden]="!isMenuOpen"
+    class="absolute text-md-dark-font text-xl font-normal flex flex-col space-y-8 py-10 right-[5vw] top-full border border-solid border-green rounded-xl items-center
+          | lg:flex lg:flex-row lg:space-y-0 lg:py-0 lg:static lg:border-none lg:text-base lg:justify-between
+          ">
     <li>
-      <a routerLink="/inicio" (click)="toggleMenu()" routerLinkActive="active" ariaCurrentWhenActive="page">Inicio</a>
+      <ul class=" | lg:flex lg:flex-row lg:space-x-10">
+        <li>
+          <a routerLink="/inicio"  routerLinkActive="active" ariaCurrentWhenActive="page">Inicio</a>
+        </li>
+        <li>
+          <a routerLink="/beneficios" routerLinkActive="active" ariaCurrentWhenActive="page">Beneficio</a>
+        </li>
+        <li>
+          <a routerLink="/planes" routerLinkActive="active" ariaCurrentWhenActive="page">Planes</a>
+        </li>
+        <li>
+          <a routerLink="/agenda" routerLinkActive="active" ariaCurrentWhenActive="page">Agendar</a>
+        </li>
+      </ul>
     </li>
     <li>
-      <a routerLink="/beneficios" (click)="toggleMenu()"  routerLinkActive="active" ariaCurrentWhenActive="page">Beneficio</a>
+      <ul class="space-y-8 pt-4 | lg:pt-0 lg:px-10 lg:space-y-0 lg:space-x-10 lg:text-nowrap lg:items-center lg:flex lg:flex-row">
+        <li>
+          <a routerLink="/login" routerLinkActive="active" ariaCurrentWhenActive="page">Iniciar Sesion</a>
+        </li>
+        <li class="text-white">
+          <nt-button [isPrimaryStyle]="false" label="Subscribirse" href="/subscripcion" />
+        </li>
+      </ul>
     </li>
-    <li>
-      <a routerLink="/planes" (click)="toggleMenu()"  routerLinkActive="active" ariaCurrentWhenActive="page">Planes</a>
-    </li>
-    <li>
-      <a routerLink="/agenda" (click)="toggleMenu()"  routerLinkActive="active" ariaCurrentWhenActive="page">Agendar</a>
-    </li>
-    <ul class="space-y-8 pt-4">
-      <li>
-        <a routerLink="/login" (click)="toggleMenu()"  routerLinkActive="active" ariaCurrentWhenActive="page">Iniciar Sesion</a>
-      </li>
-      <li>
-        <a routerLink="/subscripcion" (click)="toggleMenu()" routerLinkActive="active" ariaCurrentWhenActive="page">Subscribirse</a>
-      </li>
-    </ul>
   </ul>
-  <button (click)="toggleMenu()">
+  <button class="block lg:hidden" (click)="toggleMenu()">
     <img src="assets/hamburguer-menu.svg" width="42" alt="hamburguer menu">
   </button>
 </nav>
