chaging svg logo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <nav class="flex flex-row relative px-mobile-padding py-3 items-center w-full
      | lg:py-6 lg: justify-between">
-  <a class="flex flex-row w-24" routerLink="/inicio" ariaCurrentWhenActive="page">
-    <img src="assets/logo.png" class="w-full h-full" />
+  <a class="flex flex-row w-38" routerLink="/inicio" ariaCurrentWhenActive="page">
+    <img src="assets/logo.svg" class="w-full h-full" />
   </a>
   <ul
     [class.hidden]="!isMenuOpen"
