--- a/src/app/pages/home/components/hero/hero.component.html
+++ b/src/app/pages/home/components/hero/hero.component.html
@@ -1,7 +1,7 @@
-<div class="flex justify-center | lg:flex-row  lg:max-w-lg px-mobile-padding">
-  <div class="flex flex-col | lg:text-left items-start">
-    <h1>Tu guia hacia una mejor nutricion y bienestar</h1>
-    <p>
+<div class="flex justify-center | lg:justify-start lg:flex-row px-mobile-padding">
+  <div class="flex flex-col | lg:text-left lg:items-start lg:space-y-3 lg:max-w-md">
+    <h1 class="font-header text-green text-5xl font-bold">Tu guia hacia una mejor nutricion y bienestar</h1>
+    <p class="text-deep-dark-green | lg: max-w-sm">
       Lorem ipsum dolor sit amet,
       consectetur adipiscing elit.
       Sed do eiusmod tempor incididunt
