--- a/src/app/pages/home/components/hero/hero.component.html
+++ b/src/app/pages/home/components/hero/hero.component.html
@@ -1,7 +1,8 @@
-<div class="flex justify-center | lg:justify-start lg:flex-row px-mobile-padding">
-  <div class="flex flex-col | lg:text-left lg:items-start lg:space-y-3 lg:max-w-md">
-    <h1 class="font-header text-green text-5xl font-bold">Tu guia hacia una mejor nutricion y bienestar</h1>
-    <p class="text-deep-dark-green | lg: max-w-sm">
+<div class="flex justify-center border-b border-b-separator | lg:items-center lg:justify-start lg:flex-row lg:px-desktop-padding">
+  <!-- hero description section -->
+  <div class="flex flex-col | lg:text-left lg:items-start lg:space-y-4 lg:max-w-xl">
+    <h1 class="font-serif text-charcoal text-6xl font-light">Tu guia hacia una mejor <b class="font-semibold">nutricion</b> y <b class="font-semibold">bienestar</b></h1>
+    <p class="text-charcoal font-light | lg:text-[18px] lg:tracking-wide lg:max-w-[420px]">
       Lorem ipsum dolor sit amet,
       consectetur adipiscing elit.
       Sed do eiusmod tempor incididunt
@@ -9,7 +10,8 @@
     </p>
     <nt-button [isPrimaryStyle]="true" label="Reserva tu cita"  href="/subscripcion"/>
   </div>
-  <div>
-    <img alt="hero image"/>
+  <!-- hero img section -->
+  <div class="flex flex-1 justify-center mt-10">
+    <img src="assets/hero-image.svg" class="w-[600px]" alt="hero image"/>
   </div>
 </div>
