finish hero section for desktop and mobile

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!-- Navbar -->
-<nav class="flex flex-row relative px-mobile-padding py-3 items-center justify-between  w-full | lg:py-5 lg:border-b lg:border-lavender-gray lg:px-desktop-padding lg:justify-between ">
+<nav class="flex flex-row relative px-mobile-padding py-4 items-center justify-between border-b border-lavender-gray w-full | lg:py-5  lg:px-desktop-padding lg:justify-between ">
   <a class="flex justify-end" routerLink="/inicio" ariaCurrentWhenActive="page">
     <img src="assets/icons/nutripia-logo.png" class="w-full h-full" />
   </a>
