fixing img size in hero section

--- a/src/app/pages/home/components/hero/hero.component.html
+++ b/src/app/pages/home/components/hero/hero.component.html
@@ -14,7 +14,7 @@
   </div>
   <!-- hero img section -->
   <div class="flex order-1 bg-m mt-6 | lg:justify-center lg:flex-1 lg:order-2 lg:mt-10 ">
-    <img src="assets/images/mobile-hero-image.png" class="lg:hidden block max-w-md h-auto" alt="hero image"/>
-    <img src="assets/images/desktop-hero-image.png" class="hidden lg:block w-full h-auto" alt="hero image"/>
+    <img src="assets/images/mobile-hero-image.png" class="lg:hidden block w-full max-w-md " alt="hero image"/>
+    <img src="assets/images/desktop-hero-image.png" class="hidden w-full max-w-3xl lg:block" alt="hero image"/>
   </div>
 </div>
