adding about section

--- a/src/app/pages/home/components/hero/hero.component.html
+++ b/src/app/pages/home/components/hero/hero.component.html
@@ -1,4 +1,4 @@
-<div class="flex px-mobile-padding pt-4 pb-14 justify-center border-lavender-gray border-b flex-col items-center | lg:py-0 lg:items-center lg:justify-start lg:flex-row lg:px-desktop-padding">
+<section class="flex px-mobile-padding pt-4 pb-14 justify-center border-lavender-gray border-b flex-col items-center | lg:py-0 lg:items-center lg:justify-start lg:flex-row lg:px-desktop-padding">
   <!-- hero description section -->
   <div class="flex flex-col order-2 items-center mt-4 | lg:order-1 lg:text-left lg:items-start lg:space-y-4 lg:max-w-xl">
     <h1 class="font-serif text-4xl text-center max-w-[20ch] text-charcoal font-light | lg:text-left lg:text-[42px] | xl:text-6xl">
@@ -17,4 +17,4 @@
     <img src="assets/images/mobile-hero-image.png" class="lg:hidden block w-full max-w-md " alt="hero image"/>
     <img src="assets/images/desktop-hero-image.png" class="hidden w-full max-w-3xl lg:block" alt="hero image"/>
   </div>
-</div>
+</section>
