--- a/src/app/pages/home/components/about/about.component.html
+++ b/src/app/pages/home/components/about/about.component.html
@@ -1,8 +1,33 @@
-<section class="py-12 flex flex-col items-center">
+<section class="py-12 flex flex-col items-center space-y-7 px-5">
   <nt-subtitle title="Sobre mi" />
-  <div class="flex flex-col space-y-3 max-w-64 mt-8 items-center text-center ">
-    <h3 class="text-xl font-light">Egresada de la <b class="font-black">Universidad INACAP</b></h3>
-    <h3 class="text-xl font-light">Certificada en 2024 por <b class="font-black">institucion ISAK</b></h3>
-    <h3 class="text-xl font-light">Eterna estudiante de la <b class="font-black">Salud</b></h3>
+  <div class="flex flex-col space-y-4 max-w-64 items-center text-center">
+    <h3 class="text-2xl tracking-wide font-light">
+      Egresada de <b class="block font-black">Universidad INACAP</b>
+    </h3>
+    <h3 class="text-2xl tracking-wide font-light">
+      Certificada por <b class="block font-black">Institucion ISAK</b>
+    </h3>
+    <h3 class="text-2xl tracking-wide font-light">
+      Eterna estudiante de la <b class="block font-black">Salud</b>
+    </h3>
+  </div>
+  <div
+    class="flex flex-col items-center bg-primary-purple overflow-hidden text-white w-full max-w-80 text-center px-10 pt-8 space-y-4 rounded-t-lg rounded-b-[135px]"
+  >
+    <div class="space-y-3 w-full">
+      <h2 class="font-semibold text-xl">¿Quien Soy?</h2>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia
+        odio vitae vestibulum vestibulum.
+      </p>
+    </div>
+    <div>
+      <h2 class="font-semibold text-xl">¿Por que nutricion?</h2>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia
+        odio vitae vestibulum vestibulum.
+      </p>
+    </div>
+    <img src="assets/images/mobile-about-image.png" />
   </div>
 </section>
