progessing in the about section

--- a/src/app/pages/home/components/about/about.component.html
+++ b/src/app/pages/home/components/about/about.component.html
@@ -1,33 +1,35 @@
 <section class="py-12 flex flex-col items-center space-y-7 px-5">
   <nt-subtitle title="Sobre mi" />
-  <div class="flex flex-col space-y-4 max-w-64 items-center text-center">
-    <h3 class="text-2xl tracking-wide font-light">
-      Egresada de <b class="block font-black">Universidad INACAP</b>
-    </h3>
-    <h3 class="text-2xl tracking-wide font-light">
-      Certificada por <b class="block font-black">Institucion ISAK</b>
-    </h3>
-    <h3 class="text-2xl tracking-wide font-light">
-      Eterna estudiante de la <b class="block font-black">Salud</b>
-    </h3>
-  </div>
-  <div
-    class="flex flex-col items-center bg-primary-purple overflow-hidden text-white w-full max-w-80 text-center px-10 pt-8 space-y-4 rounded-t-lg rounded-b-[135px]"
-  >
-    <div class="space-y-3 w-full">
-      <h2 class="font-semibold text-xl">¿Quien Soy?</h2>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia
-        odio vitae vestibulum vestibulum.
-      </p>
+    <div class="flex flex-col | lg:flex-row">
+      <div class="flex flex-col space-y-4 max-w-64 items-center text-center | lg:max-w-none lg:ml-10 lg:space-y-12 lg:items-start lg:text-left lg:order-2 ">
+        <h3 class="text-4xl tracking-wide font-light">
+          Egresada de <b class="block font-black">Universidad INACAP</b>
+        </h3>
+        <h3 class="text-4xl tracking-wide font-light ">
+          Certificada por <b class="block font-black">Institucion ISAK</b>
+        </h3>
+        <h3 class="text-4xl tracking-wide font-light">
+          Eterna estudiante de la <b class="block font-black">Salud</b>
+        </h3>
+      </div>
+      <div
+          class="flex flex-col items-center bg-primary-purple overflow-hidden text-white w-full max-w-80 text-center px-6 pt-8 space-y-4 rounded-t-lg rounded-b-[135px] | lg:items-start lg:w-auto  lg:justify-start lg:max-w-xl lg:text-left lg:pl-14 lg:pr-16 lg:order-1 lg:rounded-e-full lg:overflow-visible lg:relative "
+      >
+      <div class="space-y-3 w-full max-w-sm">
+          <h2 class="font-semibold text-xl | lg:text-2xl">¿Quien Soy?</h2>
+          <p class="text-lg">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivam3us lacinia
+            odio vitae vestibulum vestibulum.
+          </p>
+        </div>
+        <div class="max-w-sm">
+          <h2 class="font-semibold text-xl | lg:text-2xl">¿Por que nutricion?</h2>
+          <p class="lg:text-lg">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia
+            odio vitae vestibulum vestibulum.
+          </p>
+        </div>
+        <img src="assets/images/mobile-about-image.png" class="lg:absolute lg:left-0 lg:bottom-0 lg:translate-x-[-75%]" />
+      </div>
     </div>
-    <div>
-      <h2 class="font-semibold text-xl">¿Por que nutricion?</h2>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia
-        odio vitae vestibulum vestibulum.
-      </p>
-    </div>
-    <img src="assets/images/mobile-about-image.png" />
-  </div>
 </section>
