--- a/src/app/pages/home/components/about/about.component.html
+++ b/src/app/pages/home/components/about/about.component.html
@@ -1,35 +1,36 @@
-<section class="py-12 flex flex-col items-center space-y-7 px-5">
-  <nt-subtitle title="Sobre mi" />
-    <div class="flex flex-col | lg:flex-row">
+<section class="py-12 flex flex-col items-center space-y-7 px-5 | lg:py-20">
+  <nt-subtitle class="lg:hidden" title="Sobre mi" />
+    <div class="flex flex-col | lg:flex-row ">
       <div class="flex flex-col space-y-4 max-w-64 items-center text-center | lg:max-w-none lg:ml-10 lg:space-y-12 lg:items-start lg:text-left lg:order-2 ">
         <h3 class="text-4xl tracking-wide font-light">
-          Egresada de <b class="block font-black">Universidad INACAP</b>
+          Egresada del <b class="block font-black">Instituto INACAP</b>
         </h3>
         <h3 class="text-4xl tracking-wide font-light ">
           Certificada por <b class="block font-black">Institucion ISAK</b>
         </h3>
         <h3 class="text-4xl tracking-wide font-light">
-          Eterna estudiante de la <b class="block font-black">Salud</b>
+          Eterna estudiante de la <b class="block font-black">Salud y la vida Fitness</b>
         </h3>
       </div>
       <div
-          class="flex flex-col items-center bg-primary-purple overflow-hidden text-white w-full max-w-80 text-center px-6 pt-8 space-y-4 rounded-t-lg rounded-b-[135px] | lg:items-start lg:w-auto  lg:justify-start lg:max-w-xl lg:text-left lg:pl-14 lg:pr-16 lg:order-1 lg:rounded-e-full lg:overflow-visible lg:relative "
+          class="flex flex-col items-center bg-primary-purple overflow-hidden text-white w-full border-2 border-solid border-charcoal  max-w-80 text-center px-6 pt-8 rounded-t-lg rounded-b-[135px] | lg:items-start lg:mt-24 lg:py-10 lg:w-auto  lg:justify-start lg:max-w-xl lg:text-left lg:pl-20 lg:pr-24 lg:order-1 lg:rounded-e-full lg:overflow-visible lg:relative lg:mr-10 "
       >
-      <div class="space-y-3 w-full max-w-sm">
-          <h2 class="font-semibold text-xl | lg:text-2xl">¿Quien Soy?</h2>
-          <p class="text-lg">
+      <nt-subtitle class="hidden | lg:text-charcoal lg:block lg:absolute top-[-4rem] " title="Sobre mi" />
+      <div class="space-y-2 w-full max-w-sm | lg:max-w-[340px]">
+          <h2 class="font-semibold text-2xl | lg:text-2xl">¿Quien Soy?</h2>
+          <p class="text-xl ">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivam3us lacinia
             odio vitae vestibulum vestibulum.
           </p>
         </div>
-        <div class="max-w-sm">
-          <h2 class="font-semibold text-xl | lg:text-2xl">¿Por que nutricion?</h2>
-          <p class="lg:text-lg">
+        <div class="max-w-sm mt-8 | lg:max-w-[340px]  lg:space-y-2 ">
+          <h2 class="font-semibold text-2xl | lg:text-2xl">¿Por que nutricion?</h2>
+          <p class="lg:text-xl ">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia
             odio vitae vestibulum vestibulum.
           </p>
         </div>
-        <img src="assets/images/mobile-about-image.png" class="lg:absolute lg:left-0 lg:bottom-0 lg:translate-x-[-75%]" />
+        <img src="assets/images/mobile-about-image.png" class="lg:absolute lg:w-full lg:max-w-md lg:left-0 lg:bottom-0 lg:translate-x-[-75%]" />
       </div>
     </div>
 </section>
