--- a/src/app/pages/home/components/about/about.component.html
+++ b/src/app/pages/home/components/about/about.component.html
@@ -1,36 +1,51 @@
-<section class="py-12 flex flex-col items-center space-y-7 px-5 | lg:py-28">
-  <nt-subtitle class="lg:hidden" title="Sobre mi" />
-    <div class="flex flex-col | lg:flex-row ">
-      <div class="flex flex-col space-y-8 items-center text-center | lg:max-w-none lg:ml-10 lg:space-y-12 lg:items-start lg:text-left lg:order-2 ">
-        <h3 class="text-4xl tracking-wide font-light">
-          Egresada de <b class="block font-black">La Univerisidad INACAP</b>
-        </h3>
-        <h3 class="text-4xl tracking-wide font-light ">
-          Certificada por <b class="block font-black">Institucion ISAK</b>
-        </h3>
-        <h3 class="text-4xl tracking-wide font-light">
-          Eterna estudiante de la <b class="block font-black">Salud y la vida Fitness</b>
-        </h3>
-      </div>
-      <div
-          class="flex flex-col items-center bg-primary-purple overflow-hidden text-white w-full border-2 border-solid border-charcoal mt-8  max-w-80 text-center px-6 pt-8 rounded-t-lg rounded-b-[135px] | lg:items-start lg:mt-24 lg:py-10 lg:w-auto  lg:justify-start lg:max-w-xl lg:text-left lg:pl-20 lg:pr-24 lg:order-1 lg:rounded-e-full lg:overflow-visible lg:relative lg:mr-10 "
-      >
-      <nt-subtitle class="hidden | lg:text-charcoal lg:block lg:absolute top-[-4rem] " title="Sobre mi" />
-      <div class="space-y-2 w-full max-w-sm | lg:max-w-[340px]">
-          <h2 class="font-semibold text-2xl | lg:text-2xl">¿Quien Soy?</h2>
-          <p class="lg:text-lg ">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivam3us lacinia
-            odio vitae vestibulum vestibulum.
-          </p>
-        </div>
-        <div class="max-w-sm mt-8 | lg:max-w-[340px]  lg:space-y-2 ">
-          <h2 class="font-semibold text-2xl | lg:text-2xl">¿Por que nutricion?</h2>
-          <p class="lg:text-lg ">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia
-            odio vitae vestibulum vestibulum.
-          </p>
-        </div>
-        <img src="assets/images/mobile-about-image.png" class="mt-5 lg:absolute lg:w-full lg:max-w-md lg:left-0 lg:bottom-[-2px] lg:translate-x-[-75%]" />
-      </div>
+<section
+  class="py-12 flex flex-col items-center space-y-7 px-5 border-lavender-gray border-b | lg:py-20"
+>
+  <nt-subtitle class="2xl:hidden" title="Sobre mi" />
+  <div
+    class="flex flex-col items-center | lg:items-center | 2xl:items-start lg:flex-row 2xl:translate-x-24"
+  >
+    <div
+      class="flex flex-col space-y-4 items-center text-center | lg:max-w-none lg:ml-20 lg:space-y-12 lg:items-start lg:text-left lg:order-2 | 2xl:ml-10"
+    >
+      <h3 class="text-2xl tracking-wide font-light | lg:text-3xl | xl:text-4xl">
+        Egresada de <b class="block font-black">La Univerisidad INACAP</b>
+      </h3>
+      <h3 class="text-2xl tracking-wide font-light | lg:text-3xl | xl:text-4xl">
+        Certificada por <b class="block font-black">Institucion ISAK</b>
+      </h3>
+      <h3 class="text-2xl tracking-wide font-light | lg:text-3xl | xl:text-4xl">
+        Eterna estudiante de la
+        <b class="block font-black">Salud y la vida Fitness</b>
+      </h3>
     </div>
+    <div
+      class="flex flex-col items-center bg-primary-purple overflow-hidden text-white w-full border-2 border-solid border-charcoal mt-8 max-w-80 text-center px-6 pt-8 rounded-t-lg rounded-b-[135px] | | 2xl:items-start 2xl:mt-24 2xl:py-10 2xl:w-auto 2xl:justify-start 2xl:max-w-xl 2xl:text-left 2xl:pl-20 2xl:pr-24 2xl:order-1 2xl:rounded-e-full 2xl:overflow-visible 2xl:relative 2xl:mr-10"
+    >
+      <nt-subtitle
+        class="hidden | 2xl:text-charcoal 2xl:block 2xl:absolute top-[-4rem]"
+        title="Sobre mi"
+      />
+      <div class="space-y-2 w-full max-w-sm | 2xl:max-w-[340px]">
+        <h2 class="font-semibold text-xl | 2xl:text-2xl">¿Quien Soy?</h2>
+        <p class="lg:text-lg">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivam3us
+          lacinia odio vitae vestibulum vestibulum.
+        </p>
+      </div>
+      <div class="max-w-sm mt-8 | 2xl:max-w-[340px] 2xl:space-y-2">
+        <h2 class="font-semibold text-xl | 2xl:text-2xl">
+          ¿Por que nutricion?
+        </h2>
+        <p class="2xl:text-lg">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus
+          lacinia odio vitae vestibulum vestibulum.
+        </p>
+      </div>
+      <img
+        src="assets/images/mobile-about-image.png"
+        class="mt-5 w-full | 2xl:absolute 2xl:max-w-sm left-0 bottom-[-2px] 2xl:translate-x-[-75%]"
+      />
+    </div>
+  </div>
 </section>
