changing forn size in about subtitles

--- a/src/app/pages/home/components/about/about.component.html
+++ b/src/app/pages/home/components/about/about.component.html
@@ -8,13 +8,13 @@
     <div
       class="flex flex-col space-y-4 items-center text-center | lg:max-w-none lg:ml-20 lg:space-y-12 lg:items-start lg:text-left lg:order-2 | 2xl:ml-10"
     >
-      <h3 class="text-2xl tracking-wide font-light | lg:text-3xl | xl:text-4xl">
+      <h3 class="text-2xl tracking-wide font-light | lg:text-4xl">
         Egresada de <b class="block font-black">La Univerisidad INACAP</b>
       </h3>
-      <h3 class="text-2xl tracking-wide font-light | lg:text-3xl | xl:text-4xl">
+      <h3 class="text-2xl tracking-wide font-light | lg:text-4xl">
         Certificada por <b class="block font-black">Institucion ISAK</b>
       </h3>
-      <h3 class="text-2xl tracking-wide font-light | lg:text-3xl | xl:text-4xl">
+      <h3 class="text-2xl tracking-wide font-light | lg:text-4xl">
         Eterna estudiante de la
         <b class="block font-black">Salud y la vida Fitness</b>
       </h3>
