fixing layout issues in tablet devices, finish about section

--- a/src/app/pages/home/components/hero/hero.component.html
+++ b/src/app/pages/home/components/hero/hero.component.html
@@ -1,18 +1,18 @@
 <section
-  class="flex px-mobile-padding pt-4 pb-14 justify-center border-lavender-gray border-b flex-col items-center | lg:py-0 lg:items-center lg:justify-start lg:flex-row lg:px-desktop-padding"
+  class="flex px-mobile-padding pt-4 pb-14 justify-center border-lavender-gray border-b flex-col items-center | lg:items-center lg:justify-start lg:flex-row lg:px-desktop-padding | 2xl:py-0"
 >
   <!-- hero description section -->
   <div
     class="flex flex-col order-2 items-center mt-4 | lg:order-1 lg:text-left lg:items-start lg:space-y-4 lg:max-w-xl"
   >
     <h1
-      class="font-serif text-4xl text-center max-w-[20ch] text-charcoal font-light | lg:text-left lg:text-[42px] | xl:text-6xl"
+      class="font-serif text-4xl text-center max-w-[20ch] text-charcoal font-light | lg:text-left | xl:text-6xl"
     >
       Tu guia hacia una mejor <b class="font-semibold">nutricion</b> y
       <b class="font-semibold">bienestar</b>
     </h1>
     <p
-      class="font-serif text-charcoal text-center font-light max-w-[40ch] mt-2 mb-4 | lg:text-left lg:text-[18px] lg:tracking-wide"
+      class="font-serif text-charcoal text-center font-light max-w-[40ch] mt-2 mb-4 | lg:text-left lg:tracking-wide | xl:text-[18px]"
     >
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod
       tempor incididunt ut labore et dolore magna aliqua.
@@ -29,12 +29,12 @@
   >
     <img
       src="assets/images/mobile-hero-image.png"
-      class="lg:hidden block w-full max-w-md"
+      class="2xl:hidden block w-full max-w-md"
       alt="hero image"
     />
     <img
       src="assets/images/desktop-hero-image.png"
-      class="hidden w-full max-w-3xl lg:block"
+      class="hidden w-full max-w-3xl | 2xl:block"
       alt="hero image"
     />
   </div>
