why us section and why us box created for mobile devices

--- a/src/app/shared/subtitle/subtitle.component.html
+++ b/src/app/shared/subtitle/subtitle.component.html
@@ -1,5 +1,7 @@
-<div class="flex space-x-3 items-center">
-  <img src="/assets/icons/apple-icon.svg" class="w-7" alt="fruit icon"/>
-  <h2 class="text-2xl font-normal | lg:text-4xl">{{ title() }}</h2>
-  <img src="/assets/icons/banana-icon.svg" class="w-7"  alt="fruit icon"/>
+<div class="flex space-x-6 items-center w-fit">
+  <img src="/assets/icons/apple-icon.svg" class="w-7" alt="fruit icon" />
+  <h2 class="text-2xl text-center font-normal max-w-32 | lg:text-4xl">
+    {{ title() }}
+  </h2>
+  <img src="/assets/icons/banana-icon.svg" class="w-7" alt="fruit icon" />
 </div>
