--- a/src/app/pages/home/sections/why-us/why-us.component.html
+++ b/src/app/pages/home/sections/why-us/why-us.component.html
@@ -1,6 +1,6 @@
-<section class="flex flex-col items-center py-10">
+<section class="flex flex-col items-center py-10 space-y-6 | lg:py-20  ">
   <nt-subtitle title="¡Conmigo Tendras!" />
-  <div class="flex flex-col items-center space-y-8 py-10">
+  <div class="flex flex-col items-center space-y-8 py-10 | md:grid md:grid-cols-2 md:space-y-0 md:gap-10 | xl:flex xl:gap-6 xl:flex-row ">
     <nt-why-us-box
       benefit="Diagnostico"
       imagePath="assets/icons/doctor-tool-icon.svg"
