--- a/src/app/shared/subtitle/subtitle.component.html
+++ b/src/app/shared/subtitle/subtitle.component.html
@@ -1,6 +1,8 @@
-<div class="flex space-x-6 items-center ">
+<div [ngClass]="customClasses">
   <img src="/assets/icons/apple-icon.svg" class="w-7" alt="fruit icon" />
-  <h2 class="text-2xl text-center font-normal max-w-[9ch] | lg:max-w-none lg:text-4xl">
+  <h2
+    class="text-2xl text-center font-normal max-w-[9ch] | lg:max-w-none lg:text-4xl"
+  >
     {{ title() }}
   </h2>
   <img src="/assets/icons/banana-icon.svg" class="w-7" alt="fruit icon" />
