--- a/src/app/pages/home/sections/about/about.component.html
+++ b/src/app/pages/home/sections/about/about.component.html
@@ -20,10 +20,10 @@
       </h3>
     </div>
     <div
-      class="flex flex-col items-center bg-primary-purple overflow-hidden text-white w-full border-2 border-solid border-charcoal mt-8 max-w-80 text-center px-6 pt-8 rounded-t-lg rounded-b-[135px] | | 2xl:items-start 2xl:mt-24 2xl:py-10 2xl:w-auto 2xl:justify-start 2xl:max-w-xl 2xl:text-left 2xl:pl-20 2xl:pr-24 2xl:order-1 2xl:rounded-e-full 2xl:overflow-visible 2xl:relative 2xl:mr-10"
+      class="flex flex-col items-center bg-primary-purple overflow-hidden text-white w-full border-2 border-solid border-charcoal mt-8 max-w-80 text-center px-6 pt-8 rounded-t-lg rounded-b-[135px] | 2xl:items-start 2xl:mt-24 2xl:py-10 2xl:w-auto 2xl:justify-start 2xl:max-w-none 2xl:text-left 2xl:pl-20 2xl:pr-24 2xl:order-1 2xl:rounded-e-full 2xl:overflow-visible 2xl:relative 2xl:mr-10"
     >
       <nt-subtitle
-        class="hidden | 2xl:text-charcoal 2xl:block 2xl:absolute top-[-4rem]"
+        class="hidden | 2xl:text-charcoal 2xl:flex 2xl:absolute top-[-2.5rem]"
         title="Sobre mi"
       />
       <div class="space-y-2 w-full max-w-sm | 2xl:max-w-[340px]">
