--- a/src/app/shared/subtitle/subtitle.component.html
+++ b/src/app/shared/subtitle/subtitle.component.html
@@ -1,7 +1,7 @@
 <div [ngClass]="customClasses">
   <img src="/assets/icons/apple-icon.svg" class="w-7" alt="fruit icon" />
   <h2
-    class="text-2xl text-center font-normal max-w-[9ch] | lg:max-w-none lg:text-4xl"
+    class="text-2xl text-center font-normal max-w-[9ch] | lg:max-w-none lg:text-4xl text-nowrap"
   >
     {{ title() }}
   </h2>
