--- a/src/app/pages/home/sections/prices/prices.component.html
+++ b/src/app/pages/home/sections/prices/prices.component.html
@@ -1,4 +1,4 @@
-<section class="bg-lavender-blush flex flex-col items-center py-14">
+<section class="bg-lavender-blush flex flex-col items-center py-14 | lg:py-20">
   <nt-subtitle title="Planes" class="mb-10" />
   <div class="flex flex-col space-y-8 | lg:flex-row lg:space-y-0 lg:space-x-12">
     <nt-price-box [pricingPlanId]="0" />
