--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -81,3 +81,40 @@
 </nav>
 <!-- router view -->
 <router-outlet />
+<footer
+  class="bg-charcoal py-14 text-lg text-white flex flex-col items-center text-center | lg:px-desktop-padding lg:space-x-8 lg:flex-row"
+>
+  <ul class="flex space-y-4 flex-col">
+    <li>
+      <h3 class="text-2xl font-bold">NutriPia</h3>
+    </li>
+    <li>
+      <span>© Copyright 2025</span>
+    </li>
+  </ul>
+  <ul class="flex flex-col space-y-4 mt-8 items-center | lg:space-y-4">
+    <li>
+      <a routerLink="/inicio">Inicio</a>
+    </li>
+    <li>
+      <a routerLink="/beneficios">Beneficio</a>
+    </li>
+    <li>
+      <a routerLink="/planes">Planes</a>
+    </li>
+    <li>
+      <a routerLink="/agenda">Agendar</a>
+    </li>
+  </ul>
+  <ul class="flex space-x-8 mt-16">
+    <li class="flex justify-center">
+      <img class="w-8" src="assets/icons/whatsapp-icon.svg" alt="" />
+    </li>
+    <li class="flex justify-center">
+      <img class="w-8" src="assets/icons/instagram-icon.svg" alt="" />
+    </li>
+    <li class="flex justify-center">
+      <img class="w-8" src="assets/icons/mail-icon.svg" alt="" />
+    </li>
+  </ul>
+</footer>
