--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,13 +2,16 @@
 <nav
   class="flex flex-row relative px-mobile-padding py-4 items-center justify-between border-b border-lavender-gray w-full | lg:py-5 lg:px-desktop-padding lg:justify-between"
 >
-  <a class="flex justify-end" routerLink="/inicio" ariaCurrentWhenActive="page">
+  <a
+    class="flex text-2xl text-charcoal tracking-wide justify-end font-bold"
+    routerLink="/inicio"
+  >
     <!-- <img src="assets/icons/nutripia-logo.png" class="w-full h-full" /> -->
-    Nutripia
+    Nutri<span class="text-primary-purple">Pia</span>
   </a>
   <ul
     [class.hidden]="!isMenuOpen"
-    class="absolute px-[10vw] bg-white font-serif text-lighter-charcoal text-xl font-normal flex flex-col space-y-12 py-12 right-[5vw] top-full border border-solid border-green rounded-xl items-center | lg:flex lg:flex-row lg:px-0 lg:space-y-0 lg:py-0 lg:static lg:border-none lg:text-base lg:justify-between lg:w-9/12 lg:items-center"
+    class="absolute w-72 bg-white font-serif text-lighter-charcoal text-xl font-normal flex flex-col space-y-12 py-12 right-[5vw] top-full border border-solid border-green rounded-xl items-center | lg:flex lg:flex-row lg:px-0 lg:space-y-0 lg:py-0 lg:static lg:border-none lg:text-base lg:justify-between lg:w-9/12 lg:items-center"
   >
     <li>
       <ul
@@ -81,40 +84,68 @@
 </nav>
 <!-- router view -->
 <router-outlet />
+<!-- footer -->
 <footer
-  class="bg-charcoal py-14 text-lg text-white flex flex-col items-center text-center | lg:px-desktop-padding lg:space-x-8 lg:flex-row"
+  class="bg-charcoal py-20 text-white flex flex-col items-center text-center | lg:text-left lg:items-start lg:justify-center lg:px-desktop-padding lg:space-x-44 lg:flex-row"
 >
-  <ul class="flex space-y-4 flex-col">
+  <div
+    class="flex flex-col space-y-10 | lg:space-y-0 lg:flex-row lg:space-x-24 lg:justify-start lg:items-start"
+  >
+    <ul class="flex space-y-4 flex-col text-center">
+      <li>
+        <h3 class="text-3xl font-bold">NutriPia</h3>
+      </li>
+      <li>
+        <span>© Copyright 2025</span>
+      </li>
+    </ul>
+    <ul
+      class="flex flex-col space-y-8 items-center text-xl | lg:items-start lg:space-y-4"
+    >
+      <li>
+        <a routerLink="/inicio">Inicio</a>
+      </li>
+      <li>
+        <a routerLink="/beneficios">Beneficio</a>
+      </li>
+      <li>
+        <a routerLink="/planes">Planes</a>
+      </li>
+      <li>
+        <a routerLink="/agenda">Agendar</a>
+      </li>
+    </ul>
+  </div>
+  <ul
+    class="flex space-x-10 mt-16 text-lg | lg:mt-0 lg:justify-start lg:items-start lg:flex-col lg:space-x-0 lg:space-y-4"
+  >
     <li>
-      <h3 class="text-2xl font-bold">NutriPia</h3>
+      <a class="flex justify-center space-x-6" href="/">
+        <img
+          class="w-10 | lg:w-6"
+          src="assets/icons/whatsapp-icon.svg"
+          alt=""
+        />
+        <span class="hidden | lg:block">+ 56 9 8932 3392</span></a
+      >
     </li>
     <li>
-      <span>© Copyright 2025</span>
+      <a class="flex justify-center space-x-6" href="/">
+        <img
+          class="w-10 | lg:w-6"
+          src="assets/icons/instagram-icon.svg"
+          alt=""
+        />
+        <span class="hidden | lg:block">_nutri_pia</span></a
+      >
     </li>
-  </ul>
-  <ul class="flex flex-col space-y-4 mt-8 items-center | lg:space-y-4">
-    <li>
-      <a routerLink="/inicio">Inicio</a>
-    </li>
-    <li>
-      <a routerLink="/beneficios">Beneficio</a>
-    </li>
-    <li>
-      <a routerLink="/planes">Planes</a>
-    </li>
-    <li>
-      <a routerLink="/agenda">Agendar</a>
-    </li>
-  </ul>
-  <ul class="flex space-x-8 mt-16">
     <li class="flex justify-center">
-      <img class="w-8" src="assets/icons/whatsapp-icon.svg" alt="" />
-    </li>
-    <li class="flex justify-center">
-      <img class="w-8" src="assets/icons/instagram-icon.svg" alt="" />
-    </li>
-    <li class="flex justify-center">
-      <img class="w-8" src="assets/icons/mail-icon.svg" alt="" />
+      <a class="flex justify-center items-center space-x-6" href="/">
+        <img class="w-10 | lg:w-6" src="assets/icons/mail-icon.svg" alt="" />
+        <span class="hidden | lg:block"
+          >pia.nutricionista&#64;gmail.com</span
+        ></a
+      >
     </li>
   </ul>
 </footer>
