--- a/src/app/shared/button/button.component.html
+++ b/src/app/shared/button/button.component.html
@@ -1,3 +1,3 @@
-<a [ngClass]="isPrimary() ? primary : alternative">
+<a [ngClass]="isPrimary() ? primary : alternative" [href]="href()">
   {{ label() }}
 </a>
